tests/machine/x/go/group_by_join.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/group_by_join.go:12:18: undefined: CustomersItem
tests/machine/x/go/group_by_join.go:15:5: undefined: CustomersItem
tests/machine/x/go/group_by_join.go:20:15: undefined: OrdersItem
tests/machine/x/go/group_by_join.go:23:5: undefined: OrdersItem
tests/machine/x/go/group_by_join.go:26:5: undefined: OrdersItem
tests/machine/x/go/group_by_join.go:30:14: undefined: Stats
tests/machine/x/go/group_by_join.go:60:16: undefined: Stats
tests/machine/x/go/group_by_join.go:62:30: undefined: Stats
